# aio-kong

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  Makefile  pyproject.toml  readme.md  setup.cfg  setup.py
.circleci/: config.yaml  config.yml
.github/.workflow/: build.yml
.github/workflows/: build.yml  release.yml  update.yml
dev/: Dockerfile  docker-compose.yml  install  install.sh  lint-code  release.sh  requirements-dev.txt  requirements.txt  run-black  run-black.sh  run_tests.sh  setup.sh  test-version
dev/test_env/: docker-compose.yml
dev/test_env/test_kong/: Dockerfile  start-up.sh
kong/: __init__.py  acls.py  auths.py  certificates.py  cli.py  client.py  components.py  consumers.py  jwts.py  plugins.py  routes.py  services.py  snis.py  utils.py
tests/: __init__.py  conftest.py  test.yaml  test.yml  test2.yaml  test2.yml  test3.yaml  test4.yaml  test6.yaml  test61.yaml  test7.yaml  test8.yaml  test_apply.py  test_auth_overwrite.yaml  test_basic_auth.yaml  test_cli.py  test_kong.py  test_mocks.py  test_plugins.py
tests/certificates/: cert1.pem  cert2.pem  key1.pem  key2.pem
tests/configs/: grpc.yaml  test.yaml  test5.yaml  test6.yaml  test61.yaml  test9.yaml  test_auth.yaml
