[tool.poetry]
name = "aio-kong"
version = "3.3.2"
description = "Asynchronous Kong Client"
authors = ["Luca <luca@quantmind.com>"]
license = "BSD-3-Clause"
readme = "readme.md"
packages = [
    {include = "kong"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Environment :: Web Environment",
]

[tool.poetry.urls]
"Repository" = "https://github.com/quantmind/aio-kong"
"Issues" = "https://github.com/quantmind/aio-kong/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.8.1"
click = "^8.1.3"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.10.1"
mypy = "^1.4.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.21.0"
types-PyYAML = "^6.0.11"
ruff = "^0.0.274"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kongfig = "kong.cli:kong"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]


[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F"]
line-length = 88

[tool.mypy]
disallow_untyped_calls = true
warn_return_any = false
disallow_untyped_defs = true
warn_no_return = true
