[tool.poetry]
name = "aio-kong"
version = "3.5.0"
description = "Asynchronous Kong Client"
authors = ["Luca <luca@quantmind.com>"]
license = "BSD-3-Clause"
readme = "readme.md"
packages = [
    {include = "kong"}
]

[tool.poetry.urls]
"Repository" = "https://github.com/quantmind/aio-kong"
"Issues" = "https://github.com/quantmind/aio-kong/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.9.5"
click = "^8.1.3"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.10.1"
mypy = "^1.4.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.24.0"
types-PyYAML = "^6.0.11"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kongfig = "kong.cli:kong"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]


[tool.isort]
profile = "black"

[tool.ruff]
lint.select = ["A", "E", "W", "F", "I", "B", "N"]
line-length = 88

[tool.mypy]
disallow_untyped_calls = true
warn_return_any = false
disallow_untyped_defs = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["return"]
